@@ -1182,7 +1182,7 @@ WriterFrontend* Manager::CreateWriter(EnumVal* id, EnumVal* writer, WriterBacken
 
 	if ( ! found_filter_match )
 		{
-		ID* id = global_scope()->Lookup("Log::default_rotation_interval");
+		const auto& id = global_scope()->Find("Log::default_rotation_interval");
 		assert(id);
 		winfo->interval = id->GetVal()->AsInterval();
 		}
@@ -1525,7 +1525,7 @@ bool Manager::FinishedRotation(WriterFrontend* writer, const char* new_name, con
 	Func* func = winfo->postprocessor;
 	if ( ! func )
 		{
-		ID* id = global_scope()->Lookup("Log::__default_rotation_postprocessor");
+		const auto& id = global_scope()->Find("Log::__default_rotation_postprocessor");
 		assert(id);
 		func = id->GetVal()->AsFunc();
 		}
